# wg-tui

./: .clang-format  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
python/: main.py
src/: configure.c  configure.h.in  ipc-uapi-unix.h  show.c  subcommands.h  wg-tui.c  wg-tui.h
